# sakana-ai-research-rss

./: .gitignore  README.md  config.yaml  generate_feed.py  pyproject.toml
.github/workflows/: update.yml
docs/: sakana-research.xml
tests/: test_generate_feed.py
